employee-api-old/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  namespace: employee
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employee-api
  template:
    metadata:
      labels:
        app: employee-api
    spec:
      containers:
      - name: employee-api
        image: sothy/employee-api:uat-3
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 4000
