employee-api-old/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-api-ingress
  namespace: employee
spec:
  ingressClassName: nginx
  rules:
  - host: employee-api.sothy.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: employee-api-service
            port: 
              number: 4000
